# too-many-uuids

./: Cargo.toml  README.md
src/: attempt.rs  main.rs
